# haskell-snipets

./: adhoc.hs  adts.hs  basicDataType.hs  cipher.hs  determineType.hs  folders.hs  getPerson.hs  hello.hs  huttonsRazor.hs  lists.hs  palindrome.hs  patterns.hs  phone.hs  recursion.hs  signalingAdversity.hs  strings.hs  typeInference.hs  vinegereCipher.hs
applicatives/: applicatives.cabal
applicatives/src/: Applicatives.hs  Exercises.hs  FirstExercise.hs  Id.hs  Maybes.hs  SecondExercise.hs  ValidationAp.hs  ZipListModule.hs
ciphers/: ciphers.cabal  package.yaml
ciphers/app/: Main.hs
ciphers/src/: Cipher.hs  VinegereCipher.hs
ciphers/test/: Spec.hs
foldrs/: .gitignore  ChangeLog.md  README.md  package.yaml
foldrs/src/: Exercises.hs  Foldrs.hs
functors/: package.yaml
functors/app/: Main.hs
functors/src/: Functors.hs
hangman/: hangman.cabal
hangman/app/: Main.hs
hangman/src/: Hangman.hs  Main.hs
hangman/test/: tests.hs
monads/src/: Exercises.hs  Laws.hs  Monads.hs
monoids/: monoids.cabal
monoids/app/: Main.hs
monoids/src/: LastMonoid.hs  Monoids.hs  MonoidsFinal.hs  Semigroups.hs
monoids/test/: MonoidsTests.hs  Spec.hs  tests.hs
morse-code/: morse-code.cabal  package.yaml
morse-code/app/: Main.hs
morse-code/src/: Morse.hs
morse-code/test/: tests.hs
parsers/: package.yaml
reader-monad/: .gitignore  ChangeLog.md  README.md  package.yaml
reader-monad/app/: MainReader.hs
state-monad/: .gitignore  ChangeLog.md  package.yaml
state-monad/src/: StateMain.hs
tests-project/: tests-project.cabal
tests-project/src/: Exercises.hs  HSpecTests.hs  Main.hs  Recursion.hs
tests-project/test/: ExercisesTests.hs  RecursionTests.hs  tests.hs
