name:                applicatives
version:             0.1.0.0
synopsis:            Just a exercise
description:         Eventually I will discover.
license:             BSD3
license-file:        LICENSE
author:              J. Eduardo V. Morango
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md


library
  exposed-modules:      Applicatives
  ghc-options:          -Wall -fwarn-tabs
  build-depends:        base >= 4.7 && < 5
                      , QuickCheck
                      , hspec
                      , checkers
  hs-source-dirs:       src
  default-language:     Haskell2010


executable applicatives
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , applicatives
test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             tests.hs
  build-depends:       base
                     , applicatives
                     , QuickCheck
                     , hspec
                     , checkers
  ghc-options:         -Wall -fno-warn-orphans
  default-language:    Haskell2010
