name:                ciphers
version:             0.1.0.0
synopsis:            Just a exercise
description:         Eventually I will discover.
homepage:            https://github.com/githubuser/hangman#readme
license:             BSD3
license-file:        LICENSE
author:              J. Eduardo V. Morango
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md


library
  exposed-modules:      Cipher
                      , VinegereCipher
  ghc-options:          -Wall -fwarn-tabs
  build-depends:        base >= 4.7 && < 5
                      , QuickCheck
                      , hspec
  hs-source-dirs:       src
  default-language:     Haskell2010


executable ciphers
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , ciphers

test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             tests.hs
  build-depends:       base
                     , ciphers
                     , QuickCheck
                     , hspec
  ghc-options:         -Wall -fno-warn-orphans
  default-language:    Haskell2010
