name:                tests-project
version:             0.1.0.0
license-file:        LICENSE
author:              Your Name Here
category:            Text
build-type:          Simple
cabal-version:       >=1.10


library
  exposed-modules:      Main, Recursion
  ghc-options:          -Wall -fwarn-tabs
  build-depends:        base >= 4.7 && < 5
                      , hspec
                      , QuickCheck
  hs-source-dirs:       src
  default-language:     Haskell2010

test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             tests.hs
  build-depends:       base
                     , tests-project
                     , QuickCheck
                     , hspec
  ghc-options:         -Wall -fno-warn-orphans
  default-language:    Haskell2010
